--- a/document/03-musical-parameters.Rmd
+++ b/document/03-musical-parameters.Rmd
@@ -4,7 +4,7 @@
 
 Music theorists use their experience and intuitions to build appropriate curricula for their aural skills pedagogy.
 Teaching aural skills typically starts with providing students with simpler exercises, often employing a limited number of notes and rhythms, and then slowly progressing to more difficult repertoire. 
-This progression from simpler to more difficult exercises is evident in aural skills text books.
+This progression from simpler to more difficult exercises is evident in aural skills textbooks.
 Of the major aural skills textbooks such as the @ottmanMusicSightSinging2014, @berkowitzNewApproachSight2011, @karpinskiManualEarTraining2007, and @clelandDevelopingMusicianshipAural2010, each is structured in a way that musical material presented earlier in the book is more manageable than that nearer the end.
 In fact, this is true of almost any étude book: open to a random page in a book of musical studies and the difficulty of the study will likely scale accordingly to its relative position in the textbook.
 But it is not a melody's position in a textbook that makes it difficult to perform: this difficulty comes from the structural elements from the music itself.
@@ -28,7 +28,7 @@ In fact, melody Y might be overwhelmingly difficult for the vast majority of mus
 From a pedagogical standpoint, educators need to be able to know how difficult melodies are to dictate in order to ensure a degree of fairness when assessing a student's performance.
 While of course with each student there are inevitably many variables at play in aural skills instruction ranging from personal abilities, to the goals of the instructor in the scope of their course, I find it fair to claim that pedagogues assume that students will be expected to pass pre-established benchmarks throughout their aural skills education.
 As students progress, they are expected to be able to dictate more difficult melodies, yet exactly what makes a melody complex and thus difficult to dictate is often left to the expertise and intuition of a pedagogue.
-Intuition is an important skill for teachers to cultivate, but when it comes to determining objective measures of judgment, reserach from decison making science tends to suggest that no matter the expertiese, collective and objective knowledge tends to outperform a single person's judgment (KAHHMEAN AND TVERSKY, HEART ATTACK PAPER, LOGISITC REGRESSION THING).
+Intuition is an important skill for teachers to cultivate, but when it comes to determining objective measures of judgment, research from decision making science tends to suggest that no matter the expertise, collective and objective knowledge tends to outperform a single person's judgment (KAHHMEAN AND TVERSKY, HEART ATTACK PAPER, LOGISITC REGRESSION THING).
 Having more clearly defined performance benchmarks also helps remove biases in grading that teachers may or may not be explicitly aware of. 
 
 In this chapter I survey and examine how tools from computational musicology can be used to help model an aural skills pedagogue's notion of complexity in melodies.
@@ -79,7 +79,7 @@ The table below contains the questions used in the demographic questionnaire.
 ------------------------
 
 The table below contains the questions regarding the ratings of the melodies. 
-Participants either responed using ordinal categories or moved a slider that sat atop a 100 point scale. 
+Participants either responded using ordinal categories or moved a slider that sat atop a 100 point scale. 
 
 -----------------------
 1. During which semester of Aural Skills would you think it is appropriate to give this melody as a melodic dictation?
@@ -90,8 +90,8 @@ Participants either responed using ordinal categories or moved a slider that sat
 --------------
 
 Of the respondents, the average amount of years teaching aural skills was 8.76 years ($SD = 7.60, R: 1-29$).
-I plot the breakdown of the respondant's age, educational status below in \@ref(fig:surveyageeducation).
-Of the 40 repondants, all reported used some sort of moveable system other than 2 who used a fixed system.
+I plot the breakdown of the respondent's age, educational status below in \@ref(fig:surveyageeducation).
+Of the 40 respondents, all reported used some sort of movable system other than 2 who used a fixed system.
 The sample represented over 30 different institutions.
 
 ```{r surveyageeducation, echo=FALSE, fig.cap="Demographic Breakdown of Sample",fig.align='center', out.width="80%"}
@@ -220,7 +220,7 @@ Overall, the sample exhibited an acceptable degree of inter-rater reliability as
 Plotting the respondent's answers across the textbook the melodies were taken from, with the book progressing from less to more difficult, it does appear that aural skills pedagogues tend to agree on how difficult a melody to be used in a dictation setting. 
 
 Central to my argument that, there appears to a linear trend of difficulty across the sample based on the melodies rank in the sample.
-In fact, although I presented the data above as ordinal, when I ran a mixed-effects linear regression predicting melody difficulty with both rank order as a variable as well as the melody index from the Berkowitz, the index model significantly outerperforms the rank order model.
+In fact, although I presented the data above as ordinal, when I ran a mixed-effects linear regression predicting melody difficulty with both rank order as a variable as well as the melody index from the Berkowitz, the index model significantly outperforms the rank order model.
 
 * ADD STATS HERE 
 
@@ -300,7 +300,7 @@ Additionally, FANTASATIC also provides a framework for comparing the features of
 
 Returning to the Aural Skills classroom, many of these features can be used to approximate the previously established intuitions of complexity as agreed upon by theorists.
 Below in Figure XXXX, I plot the the mean difficulty and grammar ratings given by experts for each melody in the experimental sample against each the output of FANTASTIC's features by correlating the two measures.
-Additionally, XXX displays the five strongest posititve and negatively correlated features of FANTASTIC's output with the ground truth, expert ratings. 
+Additionally, XXX displays the five strongest positive and negatively correlated features of FANTASTIC's output with the ground truth, expert ratings. 
 
 ```{r corfeature, echo=FALSE, fig.cap="FANTASTIC and Expert Ratings",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/FantasticExpertPlot.png")
@@ -311,10 +311,10 @@ readr::read_rds("img/strongfeatures.rds")
 ```
 
 From Figure \@ref(fig:corfeature) and Table HERE, there are some features that share a strong relationship with the ground truth of the expert intuitions.
-The top five features that correlate most strongs with the expert ground truths are related to the intervallic content of a melody.
-The first two features, ```i.abs.std``` and ```i.abs.mean``` are derrived measures using absolute interval distance computations.
+The top five features that correlate most strongly with the expert ground truths are related to the intervallic content of a melody.
+The first two features, ```i.abs.std``` and ```i.abs.mean``` are derived measures using absolute interval distance computations.
 The other top three features, ```step.cont.loc.var```, ```i.entropy```, and ```p.entroy``` are related to entropy measures. 
-Of the negatively correlated features, two linguistically derrived measures ```mean.Yules.K``` and ```mean.Simpsons.D``` both correlate with percieved difficutly, as does a measure of ```tonalnesss``` which in FANTASTIC is based on the Krumhansl key profiles [@krumhanslCognitiveFoundationsMusical2001].
+Of the negatively correlated features, two linguistically derived measures ```mean.Yules.K``` and ```mean.Simpsons.D``` both correlate with perceived difficulty, as does a measure of ```tonalnesss``` which in FANTASTIC is based on the Krumhansl key profiles [@krumhanslCognitiveFoundationsMusical2001].
 
 One problem in tackling this problem is that although many of these variables correlate strongly with our target variables, both our grammar and difficulty ratings, one aspect not apparent in this analysis is the correlation between each of the features. 
 In order to demonstrate this, in Figure \@ref(fig:featurecorrelations) I visualize how all the ten features from HERE correlate with one another with mode additionally included to highlight the breakdown of the corpus. 
@@ -324,7 +324,7 @@ knitr::include_graphics("img/FANTASTIC_collin.png")
 ```
 
 Among these variables, we see that there is a very high degree of correlation between many of the variables.
-For example, the two features inspired from linguistics-- ```mean.Yules.K``` and ```mean.Simpsons.D``` -- exhbit an alarming degree of correlation.
+For example, the two features inspired from linguistics-- ```mean.Yules.K``` and ```mean.Simpsons.D``` -- exhibit an alarming degree of correlation.
 We also see in this dataset evidence of the inappropriateness of including some variables such as ```d.median```, a measure relating rhythm.
 
 Here in \@ref(fig:featurecorrelations) we see computational evidence of claims made by @taylorStrategiesMemoryShort1983 when reviewing exactly what features might contribute to the degree of difficulty from a melodic dictation.
@@ -334,22 +334,22 @@ Another method, as mentioned above, could instead take a more exhaustive, but le
 
 * Regression Analyses Here 
 
-Relating again back to its implication for aural skills pedagogy, the above analysis suggests that features as derrived from the FANTASTIC toolbox can provide a meaningful step forward in helping standardize the assesment of aural skills pedagogy.
-If pedagogues were able to employ tools such as the FANTASTIC toolbox, pedagogues could not only select melodies for their own work that is able to hold certain features constant, but use of this research could also be used  generate melodies based on the desired dificulty parameter measures in order to design course curricula that would foster a  more stable curricular path among students.
+Relating again back to its implication for aural skills pedagogy, the above analysis suggests that features as derived from the FANTASTIC toolbox can provide a meaningful step forward in helping standardize the assessment of aural skills pedagogy.
+If pedagogues were able to employ tools such as the FANTASTIC toolbox, pedagogues could not only select melodies for their own work that is able to hold certain features constant, but use of this research could also be used  generate melodies based on the desired difficulty parameter measures in order to design course curricula that would foster a  more stable curricular path among students.
 Additionally, student could also work at slowly challenging themselves if this were to be incorporated into a pedagogical learning app or website. 
 
-Although this approach has been relatively successful at modeling expert ratings, using FANTASATIC's various linear combinations of these features does have important limitations.
-One of the most obviosu limitiations is that FANASATIC's measures tacitly assume listens experience melodies in some sort of perceptual suspended animation. 
-Illuminating this problem using a more tangible example, again returing to melody's X and Y, when the full set of FANTASTIC features are computed on both, THIS FACT HERE ABOUT WHAT IS SAME.
+Although this approach has been relatively successful at modeling expert ratings, using FANTASTIC's various linear combinations of these features does have important limitations.
+One of the most obvious limitations is that FANTASTIC's measures tacitly assume listens experience melodies in some sort of perceptual suspended animation. 
+Illuminating this problem using a more tangible example, again returning to melody's X and Y, when the full set of FANTASTIC features are computed on both, THIS FACT HERE ABOUT WHAT IS SAME.
 This computation arises from computing a summary measure over the melody and not modeling it in terms of real time perception. 
 In order to have more phenomenologically appropriate model that incorporates computationally derived features, it is important to also consider dynamic models of music perception when modeling difficulty. 
-Following up on another finding from this section, it also is worht of mention that the variables with the strongest predicitive powers-- here-- tend to be those associated with information content CHECK.
-In the next section, I explore how using a dynamic approach such as Marcus Pearce's Informaiton Dynamics of Music (IDyOM) model [@pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a] might provide more insights into understanding the aural skills classroom.
+Following up on another finding from this section, it also is worth of mention that the variables with the strongest predictive powers-- here-- tend to be those associated with information content CHECK.
+In the next section, I explore how using a dynamic approach such as Marcus Pearce's Information Dynamics of Music (IDyOM) model [@pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a] might provide more insights into understanding the aural skills classroom.
 
 ### Dynamic 
 
 The Information Dynamic of Music (IDyOM) model of Marcus Pearce is a computational model of auditory cognition [@pearceStatisticalLearningProbabilistic2018a].
-IDyOM is based on the assumption put forwar by Leonard Meyer that musical style can be understood as a complex network or probabilistic relationships that underly a musical style and implicitly understood by a musical community [@pearceAuditoryExpectationInformation2012; @pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a].
+IDyOM is based on the assumption put forward by Leonard Meyer that musical style can be understood as a complex network or probabilistic relationships that underlie a musical style and implicitly understood by a musical community [@pearceAuditoryExpectationInformation2012; @pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a].
 Unlike measures from FANTASTIC, which calculate summary statistics based on melodic features, IDyOM works by calculating measures of expectancy of an event based on a predefined set of musical parameters that the model was was trained on. 
 As mentioned in \@ref(#intro), the IDyOM model relies on two important theoretical assumptions based on two neural mechanisms involved in musical enculturation: the statistical learning hypothesis and probabilistic prediction hypothesis.
 According to Pearce, the Statistical Learning Hypothesis (SLH) states that:
@@ -364,7 +364,7 @@ The SLH leads the corroborating probabilistic prediction hypothesis which Pearce
 Essentially IDyOM works by providing the model with a musical corpus that it assumes is representative of a genre, or musical style.
 This musical corpus then serves as training data to approximate either a listener or style's ground truth ASK MP?.
 After establishing this corpus, IDyOM then learns both long term and short term expectations of events using a variable-order Markov model^[43-46] in order to best optimize its predictive abilities.
-The expectations that IDyOM calculates are based on a probability distribution of the proceeding events, which is then quantified in terms of informaiton content (CITE).
+The expectations that IDyOM calculates are based on a probability distribution of the proceeding events, which is then quantified in terms of information content (CITE).
 As detailed in a summary review article on IDyOM by Pearce, IDyOM has been successful at predicting 
 
 > Western listeners’ melodic pitch expectations in behavioral,
@@ -390,11 +390,11 @@ In line with Huron's reading of the Hick-Hyman Law, melodic information that peo
 More expected notes will tax memory less than unexpected notes.
 This assertion would also be predicted by the probabilistic prediction hypothesis.
 Thus, given a sequence any set of notes, the frequency facilitation hypothesis posits that the efficiency in which a melody is processed in memory is proportionally related to its degree of expectedness when quantified in information content.
-Specifically, measures of expectaiton derrived from computational models of auditory cognition like IDyOM should be able to serve as a proxy for melodic information. 
+Specifically, measures of expectation derived from computational models of auditory cognition like IDyOM should be able to serve as a proxy for melodic information. 
 
 This hypothesis generates testable predictions that can be investigated to verify its verisimilitude. 
-Important to aural skills pedagogy, the primariy prediction from this hypothesis would be that melodic patterns that occur more frequently in a corpus will be be easier to remember than those occurring less frequently.
-These frequency patterns should then directly relate to the amount of information content caclulated by IDyOM.
+Important to aural skills pedagogy, the primary prediction from this hypothesis would be that melodic patterns that occur more frequently in a corpus will be be easier to remember than those occurring less frequently.
+These frequency patterns should then directly relate to the amount of information content calculated by IDyOM.
 If this relationship does exist, then it can be used to create strategies that would then create a more linear path to success for students learning to take melodic dictation.
 
 In the final section of this chapter, I investigate this claim by conducting an analysis on a corpus of sight singing melodies to demonstrate this claim.
@@ -403,9 +403,9 @@ I then take the findings from this corpus analysis and how how it can be applied
 ### Corpus Analysis
 
 In order to investigate frequency facilitation hypothesis, I conducted a corpus study using N = 622 melodies from the above used Fifth Edition of the Berkowitz "A New Approach to Sight Singing" [@berkowitzNewApproachSight2011].
-The FFH predicts that more frequently occuring patterns will result in lower information content-- a general (tautological) byproduct of quantifying muscial feature tokens and doing computations with IC-- and that these lower informaiton content measures, when quantified, will be able to predict load on memory. 
-In order to examine this I first extracted a series of the most frequenltly occuring melodic tri grams from the Berkowitz corpus after transposing each melody to C major via the ```solfa``` tool in humdrum.
-I plot the resuling distributions of the top 1000 patterns of each fixed order predictions below in \@ref(fig:bitriquint).
+The FFH predicts that more frequently occurring patterns will result in lower information content-- a general (tautological) byproduct of quantifying musical feature tokens and doing computations with IC-- and that these lower information content measures, when quantified, will be able to predict load on memory. 
+In order to examine this I first extracted a series of the most frequently occurring melodic tri grams from the Berkowitz corpus after transposing each melody to C major via the ```solfa``` tool in humdrum.
+I plot the resulting distributions of the top 1000 patterns of each fixed order predictions below in \@ref(fig:bitriquint).
 For each distribution, I also plot the top and bottom ten tri-grams from the tri-grams in table XXXX..
 
 ```{r bitriquint, echo=FALSE, fig.cap="Distribution of m-grams",fig.align='center', out.width="100%"}
@@ -417,34 +417,34 @@ knitr::include_graphics("img/bitriquint.png")
 ```
 
 
-From \@ref(fig:bitriquint), we see that when plotted in terms of their frequency distributions, a small amont of the patterns make up for a very large the distribution of the corpus.
-As evident from HERE, we see that with the addition of more tokens added to the m-grams and also is a visual representation of why and how statistical predicitons become more unreliable with higher order predictions. 
-Intuitivly, melodic patterns from the high frequency distribution of the table would seemingly be easier to remember and then dictate than those from the tails of the distributions.
+From \@ref(fig:bitriquint), we see that when plotted in terms of their frequency distributions, a small amount of the patterns make up for a very large the distribution of the corpus.
+As evident from HERE, we see that with the addition of more tokens added to the m-grams and also is a visual representation of why and how statistical predictions become more unreliable with higher order predictions. 
+Intuitively, melodic patterns from the high frequency distribution of the table would seemingly be easier to remember and then dictate than those from the tails of the distributions.
 
 Following up on this analysis, I then trained an IDyOM model on the same corpus of melodies and thus was able to calculate the average information content the opening bi, tri, and quint grams melodies in this corpus.
-In this computation, I explicitly assume that the underlying corpus of data is representative of an indivual's perosnal expectations of musical mateiral. 
+In this computation, I explicitly assume that the underlying corpus of data is representative of an individual's personal expectations of musical material. 
 
-From these computations, we can see that almost tautolitcally, that tri-grams with higher cumulative information content appear with lower frequency and m-grams with lower cumnulative informaiton content occur more frequently.
+From these computations, we can see that almost tautologically, that tri-grams with higher cumulative information content appear with lower frequency and m-grams with lower cumulative information content occur more frequently.
 
 * HERE
 
-This observation may seem tautological, as this relationship would result from how information content is calculated (more expeted patterns have less information), but the novel assertion here is connecting the cumulative informaiotn content to ease of memory load.
-For example, in Figure \@ref(fig:tridensity), we see that when split into three sections, random samples from the the corpus when partiioned into three secitons, even just the opening of the first five notes of each melody increase per group.^[This same trend is also apparent using a general linear model across the entire corpus. I chose to model it with three groups for more effective communication.]
+This observation may seem tautological, as this relationship would result from how information content is calculated (more expected patterns have less information), but the novel assertion here is connecting the cumulative information content to ease of memory load.
+For example, in Figure \@ref(fig:tridensity), we see that when split into three sections, random samples from the the corpus when partitioned into three sections, even just the opening of the first five notes of each melody increase per group.^[This same trend is also apparent using a general linear model across the entire corpus. I chose to model it with three groups for more effective communication.]
 
 ```{r tridensity, echo=FALSE, fig.cap="Average Information Content of First Five Notes of Melodies",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/tri_distribution.png")
 ```
 
-To visualize what this might look like in a melodic dictation context, we could imagine randomly sampling melodies from even smaller sections (warrented by seeing the blip of data in the first quartile).
-If quantified using informaiton content measures, these five grams would then fill up the finite bin of memory than that were more unexpected, or had more informaiton content associated with them.
+To visualize what this might look like in a melodic dictation context, we could imagine randomly sampling melodies from even smaller sections (warranted by seeing the blip of data in the first quarterly).
+If quantified using information content measures, these five grams would then fill up the finite bin of memory than that were more unexpected, or had more information content associated with them.
 I visualize this difference in XXXX where I plot similar length five grams filling up the window of memory at different rates based on their cumulative information content. 
 
 ```{r cumplot, echo=FALSE, fig.cap="Cumlative Information Content in Melodic Incipts",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/cum_grid_plot.png")
 ```
 
-Lastly, to further investigate this claim of cumulative informaiton content, I calculated the average informaiotn cnotent for each melody baesd on several measures then used data from the survey above and plotted it against the measures of expert ratings for difficulty for the classrom and found various measures of information content to be very good predictors of difficulty ratings.
-I believe that htis gives creedence to thinking more about using comptuational measures in designing appropriate curricular measures
+Lastly, to further investigate this claim of cumulative information content, I calculated the average information content for each melody based on several measures then used data from the survey above and plotted it against the measures of expert ratings for difficulty for the classroom and found various measures of information content to be very good predictors of difficulty ratings.
+I believe that this gives credence to thinking more about using computational measures in designing appropriate curricular measures
 XXXX.
 
 ```{r modelcomparsion, echo=FALSE, fig.cap="Model Comparison",fig.align='center', out.width="100%"}
@@ -457,37 +457,37 @@ knitr::include_graphics("img/model_comparsion_gg.png")
 
 ### Implications 
 
-This implicaiton would have direct implications for the aural skills classroom, specifically for melodic dictation, as if measures of information content as modeled by IDyOM could be used as a more reliable proxy for load on memory, then a more linear path to learning patterns could result in better stratgies for learning to take dictation.
-For example, the first implication of this could be that information content, could be a more accurate proxy for the limits of musical memory as opposed to using older measures asserted by the literature that follow in the George Miller 7 +- 2 tradition which attempts to logically subsitiute items in memory for musical notes.
-While researchers liek X an Y have claimed this note-item limit to be X or Y, as disscussed in SECTION ON PROBLEMS WITH CHUNKING, using measures of infomraiton content could provide an ecologically acceptable work around to the problems of chunking within music.
-For example, if this measure proved to be useful in pedagogical applications, pedagoges would have a very powerful tool to create curricla that was designed in a much more linear path.
+This implication would have direct implications for the aural skills classroom, specifically for melodic dictation, as if measures of information content as modeled by IDyOM could be used as a more reliable proxy for load on memory, then a more linear path to learning patterns could result in better strategies for learning to take dictation.
+For example, the first implication of this could be that information content, could be a more accurate proxy for the limits of musical memory as opposed to using older measures asserted by the literature that follow in the George Miller 7 +- 2 tradition which attempts to logically substitute items in memory for musical notes.
+While researchers like X an Y have claimed this note-item limit to be X or Y, as discussed in SECTION ON PROBLEMS WITH CHUNKING, using measures of information content could provide an ecologically acceptable work around to the problems of chunking within music.
+For example, if this measure proved to be useful in pedagogical applications, pedagogues would have a very powerful tool to create curricula that was designed in a much more linear path.
 
 One of the major challenges in both teaching and learning aural skills beyond the identification of scale degrees is then identifying them in a more ecological, melodic context.
 Presenting snippets of melodies could be then be used as a very small intermediate step in teaching melodic dictation where students can then exhibit more frequent successes in the aural skills classroom in trying to dictate progressively difficulty snippets.
 If they learn the more frequent ones first, they will find them easier, but more important begin to recognize these patterns in longer exercises.
-Instead of picking melodies for practice one-by-one, pedagogues could instead give students a large compendium of small dictation exercises that were orderd to increase in their melodic information content over the course of instruction.
-In this type of applicaiton, students would not be learning to increase their melodic informmation capacity limit per se, but could provide a valueable means to give students multiple, smaller attempts to learn to take dictation, rather than being overwhelmed with longer melodies that are given to study on the premise of more ecological valididty.
-This could be done from the level of scale degree identificaiton to that of full melodies. 
-In order to demonstrate how this might work, in APPENDIX X I include a listing of 100 melodic incipits arraged in order of increasing information content. 
+Instead of picking melodies for practice one-by-one, pedagogues could instead give students a large compendium of small dictation exercises that were ordered to increase in their melodic information content over the course of instruction.
+In this type of application, students would not be learning to increase their melodic information capacity limit per se, but could provide a valuable means to give students multiple, smaller attempts to learn to take dictation, rather than being overwhelmed with longer melodies that are given to study on the premise of more ecological validity.
+This could be done from the level of scale degree identification to that of full melodies. 
+In order to demonstrate how this might work, in APPENDIX X I include a listing of 100 melodic incipits arranged in order of increasing information content. 
 Future work should investigate this experimentally and look to model it using similar methodologies that have been employed in music psychology testing paradigms (IRT WAGER, WLF, PETER AND DANIEL ).
-Finally, if useful, this could and is  type of modleing oculd also be used in future comptuational models of melodic dictation like THIS CHAPTER. 
+Finally, if useful, this could and is  type of modeling could also be used in future computational models of melodic dictation like THIS CHAPTER. 
 
 ### Limitations of FFH 
 
-This conceptualizaiton of calculating the information content of melodies is not without its limitations.
+This conceptualization of calculating the information content of melodies is not without its limitations.
 One of the core assumptions to this approach is that statistical learning does in fact take place.
 While this assumption is ubiquitous in much the music psychology literature, statistical learning as a concept has been critiqued in other related fields and deserves mentioning.
 Statistical learning rests on the premise that organisms are able to implicitly learn and track the statistical regularities in their environments.
-In this case of auditory learning, there is research to assert this claim from both the field of implicit learning and statistical learning-- two separate fields that have recently began to coalses CONWAY-- as discussed by @perruchetImplicitLearningStatistical2006.
-For example, extensive evidence as reviewed by FIND Cleeremans and Dienes (2008) show many examples of this, especially worht highlighting is that people have been show to learn variable order n-gram patterns [@remillardImplicitLearningFirst2001].
+In this case of auditory learning, there is research to assert this claim from both the field of implicit learning and statistical learning-- two separate fields that have recently began to coalesce CONWAY-- as discussed by @perruchetImplicitLearningStatistical2006.
+For example, extensive evidence as reviewed by FIND Cleeremans and Dienes (2008) show many examples of this, especially worth highlighting is that people have been show to learn variable order n-gram patterns [@remillardImplicitLearningFirst2001].
 
-Though this assertion is importantly contrasted by work such as @jamiesonApplyingExemplarModel2009] who claim that explaining these phenomena as resulting in statistal leanring is not nessecary.
-Rather, Jamieson and XXX assert that employing memory models like that of MINERVA 2 (XXXX) can accuratly model behavioral patterns in individual responses without the theoretical framework of statistal learning.
-They instead note that similar results can result from individuals making similary jugments. 
+Though this assertion is importantly contrasted by work such as @jamiesonApplyingExemplarModel2009] who claim that explaining these phenomena as resulting in statistical learning is not necessary.
+Rather, Jamieson and XXX assert that employing memory models like that of MINERVA 2 (XXXX) can accurately model behavioral patterns in individual responses without the theoretical framework of statistical learning.
+They instead note that similar results can result from individuals making similarity judgments. 
 This notation is important to highlight because as noted by @perruchetImplicitLearningStatistical2006, statistical learning depend on the tacit assumption that people are performing real-time calculations on incoming stimuli in real time.
 
-Another important caveat in the corpus analysis above is that the corpus analsis was done using fixed order search patterns^[did a grep sort count on solfa], wheras the calculations from IDyOM are based on variable order Markov-Models.
-While differences in these computations might prove meaningful, only with future experimental evidence where we corrobrate with behvioral evidence would this be worht furhter looking into.
+Another important caveat in the corpus analysis above is that the corpus analysis was done using fixed order search patterns^[did a grep sort count on solfa], whereas the calculations from IDyOM are based on variable order Markov-Models.
+While differences in these computations might prove meaningful, only with future experimental evidence where we corroborate with behavioral evidence would this be worth further looking into.
 
 ## Conclusions
 
