--- a/document/book.bib
+++ b/document/book.bib
@@ -3831,18 +3831,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/LBF3AW3D/Matzke et al. - 2010 - The issue of power in the identification of “g” wi.pdf}
 }
 
-@book{gouldMismeasureMan1996a,
-  address = {New York},
-  edition = {Rev. and expanded},
-  title = {The Mismeasure of Man},
-  isbn = {978-0-393-31425-0 978-0-393-03972-6},
-  language = {eng},
-  publisher = {{Norton}},
-  author = {Gould, Stephen Jay},
-  year = {1996},
-  note = {OCLC: 845067412}
-}
-
 @article{warneStephenJayGould2019,
   title = {Stephen {{Jay Gould}}'s {{Analysis}} of the {{Army Beta Test}} in {{The Mismeasure}} of {{Man}}: {{Distortions}} and {{Misconceptions Regarding}} a {{Pioneering Mental Test}}},
   volume = {7},
@@ -3999,8 +3987,8 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   keywords = {Instruction and study,Music,Music theory}
 }
 
-@article{harrisonHarrison1987Pdf1987,
-  title = {Harrison1987.Pdf},
+@article{harrisonValidityMusicalAptitude1987,
+  title = {The {{Validity}} and {{Musical Aptitude Profile}} for {{Predicting Grades}} in {{Freshman Music Theory}}},
   volume = {47},
   number = {2},
   journal = {Educational and Psychological Measurment},
@@ -4008,6 +3996,140 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   year = {1987},
   pages = {477-482},
   file = {/Users/davidjohnbaker/Zotero/storage/VJ7UQ2Y8/harrison1987.pdf}
+}
+
+@book{salzerStructuralHearingTonal1982,
+  address = {New York},
+  title = {Structural Hearing: Tonal Coherence in Music},
+  isbn = {978-0-486-22275-2},
+  shorttitle = {Structural Hearing},
+  language = {eng},
+  publisher = {{Dover}},
+  author = {Salzer, Felix and Mannes, Leopold},
+  year = {1982}
+}
+
+@book{schenkerFreeComposition1935,
+  address = {Hillsdale, NY},
+  series = {New Musical Theories and Fantasies},
+  title = {Free Composition},
+  isbn = {978-1-57647-074-9},
+  language = {eng},
+  number = {3},
+  publisher = {{Pendragon Press}},
+  author = {Schenker, Heinrich and Schenker, Heinrich},
+  year = {1935}
+}
+
+@book{schenkerFiveGraphicMusic1969,
+  address = {New York},
+  title = {{Five graphic music analyses (F\"unf Urlinie-Tafeln)}},
+  isbn = {978-0-486-22294-3},
+  lccn = {MT140 .S2913 1969},
+  language = {engger},
+  publisher = {{Dover Publications}},
+  author = {Schenker, Heinrich and Salzer, Felix},
+  year = {1969},
+  keywords = {Analysis; appreciation,Piano music}
+}
+
+@book{schenkerSchenkerStudies1990,
+  address = {Cambridge ; New York},
+  title = {Schenker Studies},
+  isbn = {978-0-521-36038-8},
+  lccn = {MT6 .S457 1990},
+  publisher = {{Cambridge University Press}},
+  editor = {Schenker, Heinrich and Siegel, Hedi and Schachter, Carl},
+  year = {1990},
+  keywords = {Music theory,Congresses,Schenker; Heinrich}
+}
+
+@book{schachterSchenkerStudies2006,
+  address = {Cambridge},
+  title = {Schenker Studies 2},
+  isbn = {978-0-521-02832-5 978-0-511-47029-5},
+  language = {English},
+  publisher = {{Cambridge University Press}},
+  author = {Schachter, Carl},
+  year = {2006},
+  note = {OCLC: 850820339}
+}
+
+@book{clarkeWaysListeningEcological2005,
+  address = {Oxford},
+  title = {Ways of Listening: An Ecological Approach to the Perception of Musical Meaning},
+  isbn = {978-0-19-977390-9 978-0-19-515194-7},
+  shorttitle = {Ways of Listening},
+  abstract = {Introduction -- Perception, ecology, and music -- Jimi Hendrix's "Star spangled banner" -- Music, motion, and subjectivity -- Subject-position in music -- Autonomy/heteronomy and perceptual style -- The first movement of Beethoven's string quartet in A minor, op. 132 -- Conclusion},
+  language = {eng},
+  publisher = {{Oxford Univ. Pr}},
+  author = {Clarke, Eric F.},
+  year = {2005},
+  file = {/Users/davidjohnbaker/Zotero/storage/7H9M6DFM/Clarke - 2005 - Ways of listening an ecological approach to the p.pdf},
+  note = {OCLC: 845853129}
+}
+
+@book{kermanContemplatingMusicChallenges1986,
+  address = {Cambridge, Mass},
+  title = {Contemplating Music: Challenges to Musicology},
+  isbn = {978-0-674-16678-3},
+  shorttitle = {Contemplating Music},
+  language = {eng},
+  publisher = {{Harvard Univ. Press}},
+  author = {Kerman, Joseph},
+  year = {1986}
+}
+
+@book{mcclaryFeminineEndingsMusic2002,
+  address = {Minneapolis},
+  title = {Feminine Endings: Music, Gender, and Sexuality},
+  isbn = {978-0-8166-4189-5},
+  lccn = {ML82 .M38 2002},
+  shorttitle = {Feminine Endings},
+  publisher = {{University of Minnesota Press}},
+  author = {McClary, Susan},
+  year = {2002},
+  keywords = {Feminism and music,Sex in music}
+}
+
+@article{agawuHowWeGot2004,
+  title = {How {{We Got Out}} of {{Analysis}}, and {{How}} to {{Get Back In Again}}},
+  volume = {23},
+  issn = {0262-5245, 1468-2249},
+  doi = {10.1111/j.0262-5245.2004.00204.x},
+  language = {en},
+  number = {2-3},
+  journal = {Music Analysis},
+  author = {Agawu, Kofi},
+  year = {2004},
+  pages = {267-286},
+  file = {/Users/davidjohnbaker/Zotero/storage/KK9DLVC4/Agawu - 2004 - How We Got Out of Analysis, and How to Get Back In.pdf}
+}
+
+@article{conklinMultipleViewpointSystems1995a,
+  title = {Multiple Viewpoint Systems for Music Prediction},
+  volume = {24},
+  issn = {0929-8215, 1744-5027},
+  doi = {10.1080/09298219508570672},
+  abstract = {This paper examines the prediction and genern.tion of music using a {$\cdot$}multiple viewpoint system, a collecLioa of independent views of Lhe musical surface each of which models a specific type of musical phenome11a. Both Lhe general style and a particular piece a re modeled using dual short-term and long-term theories, and Lhe model is created using machine learning techniques on a corpus o( musical examples.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Conklin, Darrell and Witten, Ian H.},
+  year = {1995},
+  pages = {51-73},
+  file = {/Users/davidjohnbaker/Zotero/storage/8PJ79G3L/Conklin and Witten - 1995 - Multiple viewpoint systems for music prediction.pdf}
+}
+
+@book{manningFoundationsStatisticalNatural1999,
+  address = {Cambridge, Mass},
+  title = {Foundations of Statistical Natural Language Processing},
+  isbn = {978-0-262-13360-9},
+  lccn = {P98.5.S83 M36 1999},
+  publisher = {{MIT Press}},
+  author = {Manning, Christopher D. and Sch\"utze, Hinrich},
+  year = {1999},
+  keywords = {Computational linguistics,Statistical methods}
 }
 
 
